--- a/ui/index.html
+++ b/ui/index.html
@@ -9,8 +9,8 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am your webapp
-            Name:Tanveer.
+            Hi Tanveer Ahmad ! I am your new webapp.
+      .
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
