--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -18,10 +18,10 @@
     </div>
     <div>
         <p>
-            This is my first article on page article one.This page was posted on 06 february 2017.
+            This is my first article on page article one.This page was posted on 06 february 2017.This is my first article on page article one.This page was posted on 06 february 2017.This is my first article on page article one.This page was posted on 06 february 2017.
         </p>
         <p>
-            This is my first article on page article one.This page was posted on 06 february 2017.
+            This is my first article on page article one.This page was posted on 06 february 2017.This is my first article on page article one.This page was posted on 06 february 2017.This is my first article on page article one.This page was posted on 06 february 2017.
         </p>
         <p>
             This is my first article on page article one.This page was posted on 06 february 2017.
