[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,6 +4,7 @@
     <title>
         Article one|Tanveer Ahmad.
     </title>
+    <meta name="view port" content="width=device-, initial-scale=1" />
 </head>
 <body>
     <div>
