[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -12,6 +12,9 @@
             Hi Tanveer Ahmad ! I am your new webapp...
       
         </div>
+        <div>
+               <a href ="/"> Article-one </a>
+        </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
