[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -13,7 +13,7 @@
       
         </div>
         <div>
-               <a href ="/"> Article-one </a>
+               <a href ="/article-one"> Page 1 </a>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
