--- a/ui/index.html
+++ b/ui/index.html
@@ -12,7 +12,7 @@
             Hi Tanveer Ahmad ! I am your new webapp...
       
         </div>
-        <div>
+        <div class="text-big bold">
                <a href ="/article-one"> Page 1 </a>
         </div>
         <script type="text/javascript" src="/ui/main.js">
