--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -22,10 +22,10 @@
             This is my first article on page article one.This page was posted on 06 february 2017 at 11.40 PM. 
         </p>
         <p>
-            This is my first article on page article one.This page was posted on 06 february 2017.This is my first article on page article one.This page was posted on 06 february 2017.This is my first article on page article one.This page was posted on 06 february 2017.
+            I am TANVEER AHMAD H.I am studying B.Tech Electronics and Communication Engineering- first year in Sastra University, Tanjore, TamilNadu.
         </p>
         <p>
-            I am studying at Sastra University, Tanjore.
+            I am rellay happy to have you as a viewer of my webapp. For any comments or suggestions mail to 1999tanveer@gmail.com or tweet to @tanveersboa.
         </p>
     </div>
 </body>
