[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -5,11 +5,20 @@
         Article one|Tanveer Ahmad.
     </title>
     <meta name="view port" content="width=device-, initial-scale=1" />
+    <style>
+      .container{
+          max-width: 900px;
+          margin 0 auto;
+          colour: "grey";
+          font-family:"sans-serif";
+      }
+    </style>
 </head>
 <body>
+<div class="container">
     <div>
         <a href ="/"> Home </a>
-    </div>
+     </div>
     <hr/>
     <h3>
         Article One.
@@ -28,6 +37,7 @@
             I am rellay happy to have you as a viewer of my webapp. For any comments or suggestions mail to 1999tanveer@gmail.com or tweet to @tanveersboa.
         </p>
     </div>
+</div>
 </body>
     
     
