--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -8,7 +8,7 @@
     <style>
       .container{
           max-width: 900px;
-          margin 0 auto;
+          margin: 0 auto;
           colour: "grey";
           font-family:"sans-serif";
       }
