--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -9,7 +9,7 @@
       .container{
           max-width: 900px;
           margin: 0 auto;
-          colour: "grey";
+          color: grey;
           font-family:"sans-serif";
       }
     </style>
