--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,12 +6,14 @@
     </title>
     <meta name="view port" content="width=device-, initial-scale=1" />
     <style>
-      .container{
-          max-width: 900px;
-          margin: 0 auto;
-          color: grey;
-          font-family:"sans-serif";
-      }
+            max-width: 850;
+            margin: 0 auto;
+            color: #333232;
+            font-family: "sans-serif";
+            padding-top: 80;
+            padding-left: 10;
+            padding-right: 10;
+         
     </style>
 </head>
 <body>
