--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -1,3 +1,23 @@
 <html>
+    
+    <head>
+         <title>
+              Article Two|Tanveer Ahmad.
+         </title>
+          <meta name="view port" content="width=device-, initial-scale=1" />
+    </head>
+
+<body>
+    <div>
+        <a href ="/"> Home </a>
+     </div>
+    <hr/>
+    <h>
+        Article Two.
+    </h>
+    <div class="center text-big bold">
+        Coming Soon...
+    </div>
+</body>
 
 </html>
