--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -1,3 +1,24 @@
 <html>
+    
+    <head>
+         <title>
+              Article Three|Tanveer Ahmad.
+         </title>
+          <meta name="view port" content="width=device-, initial-scale=1" />
+    </head>
+
+<body>
+    <div>
+        <a href ="/"> Home </a>
+     </div>
+    <hr/>
+    <h1>
+        Article three.
+    </h1>
+    <div class="center text-big bold">
+        Article three is Coming Soon...Kindly stay on the line.
+    </div>
+</body>
 
 </html>
+
