[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -14,8 +14,8 @@
         </div>
         <div class="center text-big bold">
                <a href ="/article-one"> Page 1 </a>
-               <a href ="/article-one"> Page 2 </a>
-               <a href ="/article-one"> Page 3 </a>
+               <a href ="/article-two"> Page 2 </a>
+               <a href ="/article-three"> Page 3 </a>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
