--- a/ui/index.html
+++ b/ui/index.html
@@ -14,7 +14,13 @@
         </div>
         <div class="center text-big bold">
                <a href ="/article-one"> Page 1 </a>
+        </div>
+        <hr/>
+        <div class="center text-big bold">
                <a href ="/article-two"> Page 2 </a>
+        </div>
+        <hr/>
+        <div class="center text-big bold">
                <a href ="/article-three"> Page 3 </a>
         </div>
         <script type="text/javascript" src="/ui/main.js">
