--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -4,7 +4,8 @@
          <title>
               Article Three|Tanveer Ahmad.
          </title>
-          <meta name="view port" content="width=device-, initial-scale=1" />
+         <meta name="view port" content="width=device-, initial-scale=1" />
+         <link href="/ui/style.css" rel="stylesheet" />
     </head>
 
 <body>
