--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img s="/ui/1f602.png" class="img-medium"/>
+            <img src="/ui/1f602.png" class="img-medium"/>
         </div>
         <br>
         <div class="center text-big bold">
