--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img src="/ui/1f602.png" class="img-new"/>
+            <img src="/ui/20160913_110849-min.png" class="img-new20160913_110849-min.png"/>
         </div>
         <br>
         <div class="center text-big bold">
