[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi Tanveer Ahmad ! I am your new webapp...
+            Hi Salih Ahmad ! I am your new webapp...
       
         </div>
         <div class="center text-big bold">
