[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -27,7 +27,7 @@
                <a href ="/article-three"> Page 3 </a>
         </div>
         
-        <script type="text/javascript" src="/ui/main.js">
+        //<script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
         
