--- a/ui/index.html
+++ b/ui/index.html
@@ -26,7 +26,9 @@
         <div class="center text-big bold">
                <a href ="/article-three"> Page 3 </a>
         </div>
-        
+        <script>
+            alert("You are entering Salih Ahmad's Webapp...");
+        </script>
         //<script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
