--- a/ui/index.html
+++ b/ui/index.html
@@ -29,7 +29,7 @@
         <script>
             alert("You are entering Salih Ahmad's Webapp...");
         </script>
-        //<script type="text/javascript" src="/ui/main.js">
+        <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
         
