--- a/ui/index.html
+++ b/ui/index.html
@@ -7,7 +7,7 @@
     
     <body>
         <div class="center">
-            <img src="/ui/salih.jpg" class="img-rect">
+            <img src="/ui/madi.jpg" class="img-rect">
         </div>
         <br>
         
