--- a/ui/index.html
+++ b/ui/index.html
@@ -11,7 +11,7 @@
         </div>
         <br>
         
-        <div class="center text-big bold">
+        <div id=intro class="center text-big bold">
             Hi Salih Ahmad! I am your new webapp...
        </div>
        
