[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
     </head>
     
     <body>
-        <div id=salih class="center">
+        <div id='salih' class="center">
             <img src="/ui/salih.jpg" class="img-rect">
         </div>
         <br>
