--- a/ui/index.html
+++ b/ui/index.html
@@ -16,16 +16,12 @@
        </div>
        
         <div class="center text-big bold">
-               <a href ="/article-one"> Page 1 </a>
-        </div>
-        
-        <div class="center text-big bold">
-               <a href ="/article-two"> Page 2 </a>
-        </div>
+               <a href ="/article-one"> Page 1 </a>   
 
-        <div class="center text-big bold">
+               <a href ="/article-two"> Page 2 </a>
+
                <a href ="/article-three"> Page 3 </a>
-        </div>
+        </div>*/
         <script>
             alert("You are entering Salih Ahmad's Webapp...");
         </script>
