[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -15,7 +15,15 @@
             <h3>
                 Personal.
             </h3>
-            
+            <div>
+                I am salih Ahmad. I am seven years old.
+            </div>
+            <h3>
+                Acadamics.
+            </h3>
+            <div>
+                I am second standard in SBIOA CBSE school.
+            </div>
        </div>
        
         <div class="center text-med bold">
