[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -15,14 +15,14 @@
             <h3>
                 Personal.
             </h3>
-            <div>
+            <div class="center">
                 I am salih Ahmad. I am seven years old.
             </div>
             <hr>
             <h3>
                 Acadamics.
             </h3>
-            <div>
+            <div class="center">
                 I am second standard in SBIOA CBSE school.
             </div>
             <hr>
