[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
     </head>
     
     <body>
-         <div class='container'>
+         <div class="container">
             <div id='salih' class="center">
                 <img src="/ui/salih.jpg" class="img-rect">
             </div>
@@ -18,14 +18,14 @@
             <div class="center">
                 I am salih Ahmad. I am seven years old.
             </div>
-            <hr>
+            <hr/>
            <h3>
                Acadamics.
            </h3>
             <div class="center">
                 I am second standard in SBIOA CBSE school.
             </div>
-            <hr>
+            <hr/>
         </div>
        
         <div class="center text-med bold">
