[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -36,8 +36,8 @@
                <a href ="/article-three"> Page 3 </a>            .
         </div>  
         <div class="footer">
-            
-        </div>
+            This button<button id="counter">Click Me!</button> is clicked <span id="count">0</span> times
+            </div>
         
         <script type="text/javascript" src="/ui/main.js">
         </script>
